// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 1`] = `
Object {
  "fileName": "T413 Kutsu vuorovaikutukseen.pdf",
  "textContent": "
Kutsu vuorovaikutukseen
Testiprojekti 1 UUDENMAAN_ELY+TIE+SUOMI
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) laatii tiesuunnitelmaa Testiprojekti 1 UUDENMAAN_ELY+TIE+SUOMI.
Hankkeen kuvaus suunnitteluvaiheessa
Live-tilaisuus verkossa järjestetään:



Aika: 04.03.2022 klo 15.00 - 16.00
Tilaisuuden nimi: Lorem ipsum
Linkki tilaisuuteen: Teams-linkki https://localhost:3000/suunnitelma/1/suunnittelu


Yleisötilaisuus järjestetään:



Aika: 05.04.2022 klo 10.00 - 11.00
Tilaisuuden nimi: Lorem ipsum two
Paikka: Kunnantalo, Katu 123, 00100 Helsinki
Suunnitelmaluonnoksista voi kysyä lisätietoja tai antaa palautetta soittamalla suunnittelijalle puhelinaikoina.
Puhelinajat:



Aika: 05.04.2022 klo 10.00 - 11.00
Tilaisuuden nimi: Soittoaikatilaisuuden nimi tässä
Pekka Projari (Väylävirasto), 123456789Matti Meikalainen (Väylävirasto), 123456789Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Aika: 05.04.2033 klo 12.00 - 13.00
Tilaisuuden nimi: Toisen soittoaikatilaisuuden nimi tässä
Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Vuorovaikutuksessa voi tutustua suunnitelmaluonnoksiin sekä esittää niistä mielipiteensä.

Suunnitelmaluonnoksiin voi tutustua etukäteen osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu



Tilaisuus on avoin kaikille alueen asukkaille, maanomistajille ja muille asiasta kiinnostuneille.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Tervetuloa!
Uudenmaan ELY-keskus ja Nokia
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 2`] = `
Object {
  "subject": "Kutsu vuorovaikutukseen / RUOTSIKSI Kutsu vuorovaikutukseen",
  "text": "Testiprojekti 1 UUDENMAAN_ELY+TIE+SUOMI

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) ilmoittaa, että se julkaisee kutsun, joka koskee otsikossa mainitun tiesuunnitelman vuorovaikutusta. (LjMTL 27§)

Kutsu julkaistaan 23.3.2022 Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva Kutsu vuorovaikutukseen. Kutsu tulee mahdollisuuksien mukaan julkaista edellä mainittuna kutsun julkaisupäivänä. Kutsun nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Kutsu menee ELY-keskuksen ja Väyläviraston kuulutustaululle automaattisesti Valtion liikenneväylien suunnittelu -palvelun kautta.

Hankkeen kuvaus suunnitteluvaiheessa

Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.

Lisätietoja antaa:
Nokia, Kunta Kuntalainen, 123456789, Kunta.Kuntalainen@vayla.fi.
Väylävirasto, Pekka Projari, 123456789, pekka.projari@vayla.fi.
Väylävirasto, Matti Meikalainen, 123456789, Matti.Meikalainen@vayla.fi.
Kajaani, Marko Koi, 0293121213, markku.koi@koi.com.

Liite: Kutsu vuorovaikutukseen

-----

Namnet på svenska

RUOTSIKSI RUOTSIKSI Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) ilmoittaa, että se julkaisee kutsun, joka koskee otsikossa mainitun vägplanen vuorovaikutusta. (RUOTSIKSI LjMTL 27§)

RUOTSIKSI Kutsu julkaistaan 23.3.2022 RUOTSIKSI Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

RUOTSIKSI Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva Kutsu vuorovaikutukseen. Kutsu tulee mahdollisuuksien mukaan julkaista edellä mainittuna kutsun julkaisupäivänä. Kutsun nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Kutsu menee ELY-keskuksen ja Väyläviraston kuulutustaululle automaattisesti Valtion liikenneväylien suunnittelu -palvelun kautta.

Hankkeen kuvaus suunnitteluvaiheessa ruotsiksi

RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja

RUOTSIKSI Lisätietoja antaa:
Nokia, Kunta Kuntalainen, 123456789, Kunta.Kuntalainen@vayla.fi.
Väylävirasto, Pekka Projari, 123456789, pekka.projari@vayla.fi.
Väylävirasto, Matti Meikalainen, 123456789, Matti.Meikalainen@vayla.fi.
Kajaani, Marko Koi, 0293121213, markku.koi@koi.com.

Liite: Kutsu vuorovaikutukseen",
}
`;

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 3`] = `
Object {
  "fileName": "T413 Kutsu vuorovaikutukseen RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Kutsu vuorovaikutukseen
Namnet på svenska
RUOTSIKSI Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) utarbetar vägplanen Namnet på svenska.
Hankkeen kuvaus suunnitteluvaiheessa ruotsiksi
RUOTSIKSI Live-tilaisuus verkossa järjestetään:



Tid: 04.03.2022 kl. 15.00 - 16.00
RUOTSIKSI Tilaisuuden nimi: Lorem ipsum
RUOTSIKSI Linkki tilaisuuteen: RUOTSIKSI Teams-linkki https://localhost:3000/suunnitelma/1/suunnittelu


RUOTSIKSI Yleisötilaisuus järjestetään:



Tid: 05.04.2022 kl. 10.00 - 11.00
RUOTSIKSI Tilaisuuden nimi: Lorem ipsum two
Plats: Kunnantalo, Katu 123, 00100 Helsinki
För att få mer information om planutkasten eller för att ge respons ring planeraren under telefontiderna.
RUOTSIKSI Puhelinajat:



Tid: 05.04.2022 kl. 10.00 - 11.00
RUOTSIKSI Tilaisuuden nimi: Soittoaikatilaisuuden nimi tässä
Pekka Projari (Väylävirasto), 123456789Matti Meikalainen (Väylävirasto), 123456789Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Tid: 05.04.2033 kl. 12.00 - 13.00
RUOTSIKSI Tilaisuuden nimi: Toisen soittoaikatilaisuuden nimi tässä
Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
RUOTSIKSI Vuorovaikutuksessa voi tutustua suunnitelmaluonnoksiin sekä esittää niistä mielipiteensä.
Suunnitelmaluonnoksiin voi tutustua etukäteen osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu



RUOTSIKSI Tilaisuus on avoin kaikille alueen asukkaille, maanomistajille ja muille asiasta kiinnostuneille.
RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Kunta Kuntalainen (Nokia), 
tel. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Velkommen!
RUOTSIKSI Uudenmaan ELY-keskus och Nokia
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 4`] = `
Object {
  "fileName": "20R Kutsu vuorovaikutukseen.pdf",
  "textContent": "
Kutsu vuorovaikutukseen
Testiprojekti 1 VAYLAVIRASTO+RATA+SUOMI
Väylävirasto laatii ratasuunnitelmaa Testiprojekti 1 VAYLAVIRASTO+RATA+SUOMI.
Hankkeen kuvaus suunnitteluvaiheessa
Live-tilaisuus verkossa järjestetään:



Aika: 04.03.2022 klo 15.00 - 16.00
Tilaisuuden nimi: Lorem ipsum
Linkki tilaisuuteen: Teams-linkki https://localhost:3000/suunnitelma/1/suunnittelu


Yleisötilaisuus järjestetään:



Aika: 05.04.2022 klo 10.00 - 11.00
Tilaisuuden nimi: Lorem ipsum two
Paikka: Kunnantalo, Katu 123, 00100 Helsinki
Suunnitelmaluonnoksista voi kysyä lisätietoja tai antaa palautetta soittamalla suunnittelijalle puhelinaikoina.
Puhelinajat:



Aika: 05.04.2022 klo 10.00 - 11.00
Tilaisuuden nimi: Soittoaikatilaisuuden nimi tässä
Pekka Projari (Väylävirasto), 123456789Matti Meikalainen (Väylävirasto), 123456789Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Aika: 05.04.2033 klo 12.00 - 13.00
Tilaisuuden nimi: Toisen soittoaikatilaisuuden nimi tässä
Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Vuorovaikutuksessa voi tutustua suunnitelmaluonnoksiin sekä esittää niistä mielipiteensä.

Suunnitelmaluonnoksiin voi tutustua etukäteen osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu



Tilaisuus on avoin kaikille alueen asukkaille, maanomistajille ja muille asiasta kiinnostuneille.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Tervetuloa!
Väylävirasto ja Nokia
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 5`] = `
Object {
  "subject": "Kutsu vuorovaikutukseen / RUOTSIKSI Kutsu vuorovaikutukseen",
  "text": "Testiprojekti 1 VAYLAVIRASTO+RATA+SUOMI

Väylävirasto ilmoittaa, että se julkaisee kutsun, joka koskee otsikossa mainitun ratasuunnitelman vuorovaikutusta. (ratalaki 22 § 1 mom)

Kutsu julkaistaan 23.3.2022 Väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva Kutsu vuorovaikutukseen. Kutsu tulee mahdollisuuksien mukaan julkaista edellä mainittuna kutsun julkaisupäivänä. Kutsun nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Kutsu menee ELY-keskuksen ja Väyläviraston kuulutustaululle automaattisesti Valtion liikenneväylien suunnittelu -palvelun kautta.

Hankkeen kuvaus suunnitteluvaiheessa

Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
Nokia, Kunta Kuntalainen, 123456789, Kunta.Kuntalainen@vayla.fi.
Väylävirasto, Pekka Projari, 123456789, pekka.projari@vayla.fi.
Väylävirasto, Matti Meikalainen, 123456789, Matti.Meikalainen@vayla.fi.
Kajaani, Marko Koi, 0293121213, markku.koi@koi.com.

Liite: Kutsu vuorovaikutukseen

-----

Namnet på svenska

RUOTSIKSI Trafikledsverket ilmoittaa, että se julkaisee kutsun, joka koskee otsikossa mainitun järnvägsplanen vuorovaikutusta. (RUOTSIKSI ratalaki 22 § 1 mom)

RUOTSIKSI Kutsu julkaistaan 23.3.2022 RUOTSIKSI Väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

RUOTSIKSI Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva Kutsu vuorovaikutukseen. Kutsu tulee mahdollisuuksien mukaan julkaista edellä mainittuna kutsun julkaisupäivänä. Kutsun nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Kutsu menee ELY-keskuksen ja Väyläviraston kuulutustaululle automaattisesti Valtion liikenneväylien suunnittelu -palvelun kautta.

Hankkeen kuvaus suunnitteluvaiheessa ruotsiksi

Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy

RUOTSIKSI Lisätietoja antaa:
Nokia, Kunta Kuntalainen, 123456789, Kunta.Kuntalainen@vayla.fi.
Väylävirasto, Pekka Projari, 123456789, pekka.projari@vayla.fi.
Väylävirasto, Matti Meikalainen, 123456789, Matti.Meikalainen@vayla.fi.
Kajaani, Marko Koi, 0293121213, markku.koi@koi.com.

Liite: Kutsu vuorovaikutukseen",
}
`;

exports[`asiakirjaService should generate kutsu 20T/R pdf succesfully 6`] = `
Object {
  "fileName": "20R Kutsu vuorovaikutukseen RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Kutsu vuorovaikutukseen
Namnet på svenska
Trafikledsverket utarbetar järnvägsplanen Namnet på svenska.
Hankkeen kuvaus suunnitteluvaiheessa ruotsiksi
RUOTSIKSI Live-tilaisuus verkossa järjestetään:



Tid: 04.03.2022 kl. 15.00 - 16.00
RUOTSIKSI Tilaisuuden nimi: Lorem ipsum
RUOTSIKSI Linkki tilaisuuteen: RUOTSIKSI Teams-linkki https://localhost:3000/suunnitelma/1/suunnittelu


RUOTSIKSI Yleisötilaisuus järjestetään:



Tid: 05.04.2022 kl. 10.00 - 11.00
RUOTSIKSI Tilaisuuden nimi: Lorem ipsum two
Plats: Kunnantalo, Katu 123, 00100 Helsinki
För att få mer information om planutkasten eller för att ge respons ring planeraren under telefontiderna.
RUOTSIKSI Puhelinajat:



Tid: 05.04.2022 kl. 10.00 - 11.00
RUOTSIKSI Tilaisuuden nimi: Soittoaikatilaisuuden nimi tässä
Pekka Projari (Väylävirasto), 123456789Matti Meikalainen (Väylävirasto), 123456789Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
Tid: 05.04.2033 kl. 12.00 - 13.00
RUOTSIKSI Tilaisuuden nimi: Toisen soittoaikatilaisuuden nimi tässä
Etunimi Sukunimi, 0293121213Joku Jokunen, 02998765
RUOTSIKSI Vuorovaikutuksessa voi tutustua suunnitelmaluonnoksiin sekä esittää niistä mielipiteensä.
Suunnitelmaluonnoksiin voi tutustua etukäteen osoitteessa https://localhost:3000/suunnitelma/1/suunnittelu



RUOTSIKSI Tilaisuus on avoin kaikille alueen asukkaille, maanomistajille ja muille asiasta kiinnostuneille.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Mer information om planen 



Kunta Kuntalainen (Nokia), 
tel. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Velkommen!
Trafikledsverket och Nokia
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 1`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
  "textContent": "
Kuulutus suunnitelman hyväksymispäätöksestä
Testiprojekti 2
Liikenne- ja viestintävirasto on 3.2.2022 päätöksellään traficom-123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman \\"Testiprojekti 2\\"
Päätös (www-versio) ja sen perusteena olevat asiakirjat sekä valitusosoitus ovat nähtävillä sähköisessä muodossa Uudenmaan ELY-keskuksen tietoverkossa tämän kuulutuksen nähtävillä olon ajan 2.1.2022 – 3.1.2022 https://www.ely-keskus.fi/kuulutukset.  (LjMTL 103 §).



Kuulutus on julkaistu tietoverkossa Uudenmaan ELY-keskuksen verkkosivuilla 2.1.2022.
Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §), eli 2.1.2022
Päätökseen voi valittamalla hakea muutosta Hämeenlinnan hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 2`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
  "textContent": "Hyväksymispäätöksestä ilmoittaminen
Testiprojekti 2
Hyväksymispäätöksestä ilmoittaminen
Uudenmaan ELY-keskus ilmoittaa Mikkeli, Juva, Savonlinna ja Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen tiesuunnitelman Testiprojekti 2.
Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
Toimivaltaisen viranomaisen kuulutuksesta ilmoittaminen
Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Testiprojekti 2\\" tiesuunnitelman hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



Uudenmaan ELY-keskus pyytää kuntaa/kaupunkia julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.

Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 3`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
  "textContent": "
Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 2
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman hyväksymispäätöstä. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.ely-keskus.fi/kuulutukset



Kuulutus on nähtävillä 2.1.2022 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 4`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
  "textContent": "
Hyväksymispäätöksestä ilmoittaminen muistuttajille
Uudenmaan ELY-keskus ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen tiesuunnitelman Testiprojekti 2.
Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Testiprojekti 2\\" tiesuunnitelman hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 5`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
  "textContent": "
Hyväksymispäätöksestä ilmoittaminen lausunnonantajille
Uudenmaan ELY-keskus ilmoittaa lausunnonantajille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen tiesuunnitelman Testiprojekti 2.
Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Testiprojekti 2\\" tiesuunnitelman hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 6`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_60R Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
  "textContent": "
Kuulutus suunnitelman hyväksymispäätöksestä
Testiprojekti 2
Nähtävilläoloaika: 2.1.2022 - 3.1.2022
Liikenne-, ja viestintävirasto on 3.2.2022 päätöksellään traficom-123 hyväksynyt ratalain (110/2007) mukaisen ratasuunnitelman: Testiprojekti 2.
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä sähköisenä Väyläviraston verkkosivuilla osoitteessa https://localhost:3000/suunnitelma/2/hyvaksymispaatos yllä ilmoitetun ajan. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §).



Nähtävillä oleva aineisto:Päätös (www-versio) ja sen perusteena olevat asiakirjat https://localhost:3000/suunnitelma/2/hyvaksymispaatos (aineisto poistetaan nähtävilläoloajan päätyttyä)



Nähtävillä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 7`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_61R Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
  "textContent": "Testiprojekti 2
Hyväksymispäätöksestä ilmoittaminen
Väylävirasto ilmoittaa Mikkeli, Juva, Savonlinna ja Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen ratasuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91 § 2 mom)
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan sähköisenä Väyläviraston verkkosivuilla https://www.vayla.fi/kuulutukset (ratalaki 90 §).



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Väyläviraston kuulutuksesta ilmoittaminen
Väylävirasto ilmoittaa, että se julkaisee ratalain 90 §:n 1 momentin sekä hallintolain 62 a §:n nojalla tietoverkossaan kuulutuksen, joka koskee Testiprojekti 2 hyväksymispäätöksen tiedoksiantoa. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
Kuulutus on nähtävillä yllä mainittuna ajankohtana Väyläviraston verkkosivuilla.
Väylävirasto pyytää kuntaa ja ELY-keskusta julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta (ratalaki 90 § 1 mom, kuntalaki 108 §). Ilmoituksen nähtävillä oloa ei kunnan tarvitse todentaa Väylävirastolle. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.
Väylävirasto liittää oheen ilmoituksen, jota kunta voi käyttää sellaisenaan. Jos kunta laatii oman ilmoituksen, sitä pyydetään kuitenkin käyttämään oheisessa ilmoituksessa olevaa hankkeen nimeä sellaisenaan sekä käyttämään ilmoituksessa olevaa linkkiä.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 8`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_12R Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
  "textContent": "
Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 2
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun ratasuunnitelman hyväksymispäätöstä. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.vayla.fi/kuulutukset



Kuulutus on nähtävillä 2.1.2022 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 9`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_63R Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen ratasuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). Mikäli olet lähettänyt muistutuksen toisten henkilöiden puolesta tai tehnyt yhteismuistutuksen, pyydämme välittämään tämän ilmoituksen myös muille muistuttajille tiedoksi.
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 10`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_62R Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto ilmoittaa lausunnonantajille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen ratasuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). 
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 11`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_60YS Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
  "textContent": "
Kuulutus suunnitelman hyväksymispäätöksestä
Testiprojekti 2
Nähtävilläoloaika: 2.1.2022 - 3.1.2022
Liikenne-, ja viestintävirasto on 3.2.2022 päätöksellään traficom-123 hyväksynyt ratalain (110/2007) mukaisen yleissuunnitelman: Testiprojekti 2.
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä sähköisenä Väyläviraston verkkosivuilla osoitteessa https://localhost:3000/suunnitelma/2/hyvaksymispaatos yllä ilmoitetun ajan. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §).



Nähtävillä oleva aineisto:Päätös (www-versio) ja sen perusteena olevat asiakirjat https://localhost:3000/suunnitelma/2/hyvaksymispaatos (aineisto poistetaan nähtävilläoloajan päätyttyä)



Nähtävillä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 12`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_61YS Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
  "textContent": "Testiprojekti 2
Hyväksymispäätöksestä ilmoittaminen
Väylävirasto ilmoittaa Mikkeli, Juva, Savonlinna ja Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen yleissuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91 § 2 mom)
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan sähköisenä Väyläviraston verkkosivuilla https://www.vayla.fi/kuulutukset (ratalaki 90 §).



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Väyläviraston kuulutuksesta ilmoittaminen
Väylävirasto ilmoittaa, että se julkaisee ratalain 90 §:n 1 momentin sekä hallintolain 62 a §:n nojalla tietoverkossaan kuulutuksen, joka koskee Testiprojekti 2 hyväksymispäätöksen tiedoksiantoa. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
Kuulutus on nähtävillä yllä mainittuna ajankohtana Väyläviraston verkkosivuilla.
Väylävirasto pyytää kuntaa ja ELY-keskusta julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta (ratalaki 90 § 1 mom, kuntalaki 108 §). Ilmoituksen nähtävillä oloa ei kunnan tarvitse todentaa Väylävirastolle. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.
Väylävirasto liittää oheen ilmoituksen, jota kunta voi käyttää sellaisenaan. Jos kunta laatii oman ilmoituksen, sitä pyydetään kuitenkin käyttämään oheisessa ilmoituksessa olevaa hankkeen nimeä sellaisenaan sekä käyttämään ilmoituksessa olevaa linkkiä.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 13`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_12YS Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
  "textContent": "
Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 2
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun yleissuunnitelman hyväksymispäätöstä. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.vayla.fi/kuulutukset



Kuulutus on nähtävillä 2.1.2022 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 14`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_63YS Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen yleissuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). Mikäli olet lähettänyt muistutuksen toisten henkilöiden puolesta tai tehnyt yhteismuistutuksen, pyydämme välittämään tämän ilmoituksen myös muille muistuttajille tiedoksi.
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 15`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_62YS Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto ilmoittaa lausunnonantajille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen yleissuunnitelman: Testiprojekti 2. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). 
Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 16`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431 Kuulutus hyvaksymispaatoksen nahtavillaolo RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Kuulutus suunnitelman hyväksymispäätöksestä
Namnet på svenska
RUOTSIKSI Liikenne- ja viestintävirasto on 3.2.2022 päätöksellään traficom-123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen vägplanen \\"Namnet på svenska\\"
RUOTSIKSI Päätös (www-versio) ja sen perusteena olevat asiakirjat sekä valitusosoitus ovat nähtävillä sähköisessä muodossa RUOTSIKSI Uudenmaan ELY-keskuksen tietoverkossa tämän kuulutuksen nähtävillä olon ajan 2.1.2022 – 3.1.2022 https://www.ely-keskus.fi/kuulutukset.  (LjMTL 103 §).



RUOTSIKSI Kuulutus on julkaistu tietoverkossa RUOTSIKSI Uudenmaan ELY-keskuksen verkkosivuilla 2.1.2022.
RUOTSIKSI Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §), eli 2.1.2022
RUOTSIKSI Päätökseen voi valittamalla hakea muutosta RUOTSIKSIHämeenlinnan hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.
RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
RUOTSIKSI Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 17`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle RUOTSIKSI.pdf",
  "textContent": "Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI
Namnet på svenska
Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa S:t Michel, Juva, Nyslott och RUOTSIKSI Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen vägplanen Namnet på svenska.
RUOTSIKSI Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
RUOTSIKSI Toimivaltaisen viranomaisen kuulutuksesta ilmoittaminen
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Namnet på svenska\\" vägplanen hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 RUOTSIKSI Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus pyytää kuntaa/kaupunkia julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.

RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
RUOTSIKSI Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 18`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Ilmoitus RUOTSIKSI Uudenmaan ELY-keskuksen kuulutuksesta
Namnet på svenska
RUOTSIKSI RUOTSIKSI Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun vägplanen hyväksymispäätöstä. RUOTSIKSI Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §) 
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.ely-keskus.fi/kuulutukset



RUOTSIKSI Kuulutus on nähtävillä 2.1.2022 välisen ajan
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 19`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille RUOTSIKSI.pdf",
  "textContent": "
Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI muistuttajille RUOTSIKSI
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen vägplanen Namnet på svenska.
RUOTSIKSI Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Namnet på svenska\\" vägplanen hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 RUOTSIKSI Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 20`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille RUOTSIKSI.pdf",
  "textContent": "
Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI lausunnonantajille RUOTSIKSI
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa lausunnonantajille RUOTSIKSI, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 liikennejärjestelmästä ja maanteistä annetun lain (503/2005, LjMTL) mukaisen vägplanen Namnet på svenska.
RUOTSIKSI Uudenmaan ELY-keskus lähettää hyväksymispäätöksen tiedoksenne. (LjMTL 104 §).
RUOTSIKSI RUOTSIKSI Uudenmaan ELY-keskus ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain 103 §:n sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee \\"Namnet på svenska\\" vägplanen hyväksymispäätöksen nähtäville asettamista. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 ja se on nähtävillä 2.1.2022 – 3.1.2022 RUOTSIKSI Uudenmaan ELY-keskuksen tietoverkossa osoitteessa https://www.ely-keskus.fi/kuulutukset. Sähköiseen aineistoon on mahdollista tutustua 3.1.2022 asti liitteissä mainitun linkin kautta. Aikaisemmin mainitun päivämäärän jälkeen linkki ei ole enää käytössä.



RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 21`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_60R Kuulutus hyvaksymispaatoksen nahtavillaolo RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Kuulutus suunnitelman hyväksymispäätöksestä
Namnet på svenska
RUOTSIKSI Nähtävilläoloaika: 2.1.2022 - 3.1.2022
RUOTSIKSI Liikenne-, ja viestintävirasto on 3.2.2022 päätöksellään traficom-123 hyväksynyt ratalain (110/2007) mukaisen järnvägsplanen: Namnet på svenska.
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä sähköisenä Väyläviraston verkkosivuilla osoitteessa https://localhost:3000/suunnitelma/2/hyvaksymispaatos yllä ilmoitetun ajan. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §).



RUOTSIKSI Nähtävillä oleva aineisto:RUOTSIKSI Päätös (www-versio) ja sen perusteena olevat asiakirjat https://localhost:3000/suunnitelma/2/hyvaksymispaatos (aineisto poistetaan nähtävilläoloajan päätyttyä)



RUOTSIKSI Nähtävillä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Trafikledsverket
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 22`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_61R Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle RUOTSIKSI.pdf",
  "textContent": "Namnet på svenska
Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI
RUOTSIKSI Väylävirasto ilmoittaa S:t Michel, Juva, Nyslott och RUOTSIKSI Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen järnvägsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91 § 2 mom)
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan sähköisenä Väyläviraston verkkosivuilla https://www.vayla.fi/kuulutukset (ratalaki 90 §).



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
RUOTSIKSI Väyläviraston kuulutuksesta ilmoittaminen
RUOTSIKSI Väylävirasto ilmoittaa, että se julkaisee ratalain 90 §:n 1 momentin sekä hallintolain 62 a §:n nojalla tietoverkossaan kuulutuksen, joka koskee Namnet på svenska hyväksymispäätöksen tiedoksiantoa. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
RUOTSIKSI Kuulutus on nähtävillä yllä mainittuna ajankohtana Väyläviraston verkkosivuilla.
RUOTSIKSI Väylävirasto pyytää kuntaa ja ELY-keskusta julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta (ratalaki 90 § 1 mom, kuntalaki 108 §). Ilmoituksen nähtävillä oloa ei kunnan tarvitse todentaa Väylävirastolle. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.
RUOTSIKSI Väylävirasto liittää oheen ilmoituksen, jota kunta voi käyttää sellaisenaan. Jos kunta laatii oman ilmoituksen, sitä pyydetään kuitenkin käyttämään oheisessa ilmoituksessa olevaa hankkeen nimeä sellaisenaan sekä käyttämään ilmoituksessa olevaa linkkiä.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Trafikledsverket
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 23`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_12R Ilmoitus hyvaksymispaatoksen kuulutuksesta RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Ilmoitus RUOTSIKSI Väyläviraston kuulutuksesta
Namnet på svenska
RUOTSIKSI Trafikledsverket julkaisee kuulutuksen, joka koskee otsikossa mainitun järnvägsplanen hyväksymispäätöstä. Trafikledsverket saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.vayla.fi/kuulutukset



RUOTSIKSI Kuulutus on nähtävillä 2.1.2022 välisen ajan
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 24`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_63R Ilmoitus hyvaksymispaatoksesta muistuttajille RUOTSIKSI.pdf",
  "textContent": "
Namnet på svenska
RUOTSIKSI Väylävirasto ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen järnvägsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). RUOTSIKSI Mikäli olet lähettänyt muistutuksen toisten henkilöiden puolesta tai tehnyt yhteismuistutuksen, pyydämme välittämään tämän ilmoituksen myös muille muistuttajille tiedoksi.
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 25`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_62R Ilmoitus hyvaksymispaatoksesta lausunnon antajille RUOTSIKSI.pdf",
  "textContent": "
Namnet på svenska
RUOTSIKSI Väylävirasto ilmoittaa lausunnonantajille RUOTSIKSI, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen järnvägsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). 
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 26`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_60YS Kuulutus hyvaksymispaatoksen nahtavillaolo RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Kuulutus suunnitelman hyväksymispäätöksestä
Namnet på svenska
RUOTSIKSI Nähtävilläoloaika: 2.1.2022 - 3.1.2022
RUOTSIKSI Liikenne-, ja viestintävirasto on 3.2.2022 päätöksellään traficom-123 hyväksynyt ratalain (110/2007) mukaisen utredningsplanen: Namnet på svenska.
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä sähköisenä Väyläviraston verkkosivuilla osoitteessa https://localhost:3000/suunnitelma/2/hyvaksymispaatos yllä ilmoitetun ajan. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä päivänä kuulutuksen julkaisemisajankohdasta (hallintolaki 62 a §).



RUOTSIKSI Nähtävillä oleva aineisto:RUOTSIKSI Päätös (www-versio) ja sen perusteena olevat asiakirjat https://localhost:3000/suunnitelma/2/hyvaksymispaatos (aineisto poistetaan nähtävilläoloajan päätyttyä)



RUOTSIKSI Nähtävillä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Trafikledsverket
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 27`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_61YS Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle RUOTSIKSI.pdf",
  "textContent": "Namnet på svenska
Hyväksymispäätöksestä ilmoittaminen RUOTSIKSI
RUOTSIKSI Väylävirasto ilmoittaa S:t Michel, Juva, Nyslott och RUOTSIKSI Etelä-Savon ELY-keskus, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen utredningsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91 § 2 mom)
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan sähköisenä Väyläviraston verkkosivuilla https://www.vayla.fi/kuulutukset (ratalaki 90 §).



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
RUOTSIKSI Väyläviraston kuulutuksesta ilmoittaminen
RUOTSIKSI Väylävirasto ilmoittaa, että se julkaisee ratalain 90 §:n 1 momentin sekä hallintolain 62 a §:n nojalla tietoverkossaan kuulutuksen, joka koskee Namnet på svenska hyväksymispäätöksen tiedoksiantoa. Kuulutus sekä päätös ja sen perusteena olevat asiakirjat pidetään nähtävillä vähintään muutoksenhaulle säädetyn ajan. Tiedoksisaannin katsotaan tapahtuneen seitsemäntenä päivänä julkaisuajankohdasta.
RUOTSIKSI Kuulutus on nähtävillä yllä mainittuna ajankohtana Väyläviraston verkkosivuilla.
RUOTSIKSI Väylävirasto pyytää kuntaa ja ELY-keskusta julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta (ratalaki 90 § 1 mom, kuntalaki 108 §). Ilmoituksen nähtävillä oloa ei kunnan tarvitse todentaa Väylävirastolle. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä.
RUOTSIKSI Väylävirasto liittää oheen ilmoituksen, jota kunta voi käyttää sellaisenaan. Jos kunta laatii oman ilmoituksen, sitä pyydetään kuitenkin käyttämään oheisessa ilmoituksessa olevaa hankkeen nimeä sellaisenaan sekä käyttämään ilmoituksessa olevaa linkkiä.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
Trafikledsverket
LUONNOSLUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 28`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_12YS Ilmoitus hyvaksymispaatoksen kuulutuksesta RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Ilmoitus RUOTSIKSI Väyläviraston kuulutuksesta
Namnet på svenska
RUOTSIKSI Trafikledsverket julkaisee kuulutuksen, joka koskee otsikossa mainitun utredningsplanen hyväksymispäätöstä. Trafikledsverket saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.vayla.fi/kuulutukset



RUOTSIKSI Kuulutus on nähtävillä 2.1.2022 välisen ajan
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 29`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_63YS Ilmoitus hyvaksymispaatoksesta muistuttajille RUOTSIKSI.pdf",
  "textContent": "
Namnet på svenska
RUOTSIKSI Väylävirasto ilmoittaa muistutuksen tehneille, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen utredningsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). RUOTSIKSI Mikäli olet lähettänyt muistutuksen toisten henkilöiden puolesta tai tehnyt yhteismuistutuksen, pyydämme välittämään tämän ilmoituksen myös muille muistuttajille tiedoksi.
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Hyvaksymispaatos succesfully 30`] = `
Object {
  "fileName": "esikatselu_hyvaksymispaatos_62YS Ilmoitus hyvaksymispaatoksesta lausunnon antajille RUOTSIKSI.pdf",
  "textContent": "
Namnet på svenska
RUOTSIKSI Väylävirasto ilmoittaa lausunnonantajille RUOTSIKSI, että Liikenne- ja viestintävirasto on 3.2.2022 hyväksynyt päätöksellään traficom-123 ratalain mukaisen utredningsplanen: Namnet på svenska. Väylävirasto lähettää hyväksymispäätöksen tiedoksenne. (ratalaki 91§ 2 mom). 
RUOTSIKSI Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävänä 2.1.2022 – 3.1.2022 välisen ajan Väyläviraston verkko-sivuilla osoitteessa https://www.vayla.fi/kuulutukset



Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



RUOTSIKSI Liitteenä olevasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.
Mer information om planen 



Pekka Projari (Väylävirasto), 
tel. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
tel. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 1`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_T414 Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "
KUULUTUS SUUNNITELMAN NÄHTÄVILLE ASETTAMISESTA
Uudenmaan ELY-keskus on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Kuulutus on julkaistu tietoverkossa Uudenmaan ELY-keskuksen verkkosivuilla 7.6.2022. Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §). 
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Uudenmaan ELY-keskuksen tietoverkossa https://www.ely-keskus.fi/kuulutukset (LjMTL 27 §). 
Kiinteistön omistajilla ja muilla asianosaisilla sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma saattaa vaikuttaa, on mahdollisuus muistutusten tekemiseen suunnitelmasta. Muistutukset on toimitettava Uudenmaan ELY-keskukselle ennen nähtävänäoloajan päättymistä (LjMTL 27 §) osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Muistutukseen on liitettävä asian asianumero ELY/2/2022.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 2`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "
Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta
Testiprojekti 2
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman nähtäville asettamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://www.ely-keskus.fi/kuulutukset



Kuulutus on nähtävillä 7.6.2022-7.6.2042 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 3`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_31T Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf",
  "textContent": "
Testiprojekti 2
Uudenmaan ELY-keskus on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Uudenmaan ELY-keskuksen tietoverkossa https://www.ely-keskus.fi/kuulutukset (LjMTL 27 §). Kiinteistön omistajilla ja muilla asianosaisilla on mahdollisuus muistutuksen tekemiseen suunnitelmasta. Muistutukset on toimitettava Uudenmaan ELY-keskuksen kirjaamoon uudenmaan_kirjaamo@uudenmaan.elytai <postiosoite> ennen nähtävillä oloajan päättymistä. Muistutukseen on liitettävä asian asianumero ELY/2/2022
Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):
	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen/rautatiealueeseen.

Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Uudenmaan ELY-keskus
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 4`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_30R Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "
KUULUTUS SUUNNITELMAN NÄHTÄVILLE ASETTAMISESTA
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Kuulutus on julkaistu tietoverkossa Väyläviraston verkkosivuilla 7.6.2022. Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §). 
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Väyläviraston tietoverkossa https://www.vayla.fi/kuulutukset (LjMTL 27 §). 
Kiinteistön omistajilla ja muilla asianosaisilla sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma saattaa vaikuttaa, on mahdollisuus muistutusten tekemiseen suunnitelmasta. Muistutukset on toimitettava Väylävirastolle ennen nähtävänäoloajan päättymistä (LjMTL 27 §) osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Muistutukseen on liitettävä asian asianumero VAYLA/2/2022.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 5`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_12R Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "
Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 2
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun ratasuunnitelman nähtäville asettamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://www.vayla.fi/kuulutukset



Kuulutus on nähtävillä 7.6.2022-7.6.2042 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 6`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_31R Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Väyläviraston tietoverkossa https://www.vayla.fi/kuulutukset (LjMTL 27 §). Kiinteistön omistajilla ja muilla asianosaisilla on mahdollisuus muistutuksen tekemiseen suunnitelmasta. Muistutukset on toimitettava Väyläviraston kirjaamoon <kirjaamon VAYLAVIRASTO osoitetta ei löydy>tai <postiosoite> ennen nähtävillä oloajan päättymistä. Muistutukseen on liitettävä asian asianumero VAYLA/2/2022
Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja halti-joille (ratalaki 22 § 3 mom):
	- joiden kiinteistöstä suunnitelman mukaan lunastetaan aluetta
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue
	- joiden kiinteistön alueeseen perustetaan muu oikeus (tieoikeus, laskuoja)
	- joiden kiinteistö rajoittuu rautatiealueeseen/tiealueeseen

Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 7`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_30YS Kuulutus suunnitelman nahtavillaolo.pdf",
  "textContent": "
KUULUTUS SUUNNITELMAN NÄHTÄVILLE ASETTAMISESTA
Väylävirasto on laatinut ratalain (110/2007) mukaisen yleissuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Kuulutus on julkaistu tietoverkossa Väyläviraston verkkosivuilla 7.6.2022. Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §). 
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Väyläviraston tietoverkossa https://www.vayla.fi/kuulutukset (LjMTL 27 §). 
Kiinteistön omistajilla ja muilla asianosaisilla sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma saattaa vaikuttaa, on mahdollisuus muistutusten tekemiseen suunnitelmasta. Muistutukset on toimitettava Väylävirastolle ennen nähtävänäoloajan päättymistä (LjMTL 27 §) osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Muistutukseen on liitettävä asian asianumero VAYLA/2/2022.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 8`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_12YS Ilmoitus suunnitelman nahtavillaolo.pdf",
  "textContent": "
Ilmoitus Väyläviraston kuulutuksesta
Testiprojekti 2
Väylävirasto julkaisee kuulutuksen, joka koskee otsikossa mainitun yleissuunnitelman nähtäville asettamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (ratalaki 95 §/LjMTL 108§, HL 62 a §) 
Kuulutus julkaistaan 7.6.2022 osoitteessa https://www.vayla.fi/kuulutukset



Kuulutus on nähtävillä 7.6.2022-7.6.2042 välisen ajan
Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutukset for Nahtavillaolo succesfully 9`] = `
Object {
  "fileName": "esikatselu_nahtavillaolo_31YS Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf",
  "textContent": "
Testiprojekti 2
Väylävirasto on laatinut ratalain (110/2007) mukaisen yleissuunnitelman Testiprojekti 2, Mikkeli, Juva ja Savonlinna
Suunnitelma pidetään yleisesti nähtävänä 7.6.2022-7.6.2042 välisen ajan Väyläviraston tietoverkossa https://www.vayla.fi/kuulutukset (LjMTL 27 §). Kiinteistön omistajilla ja muilla asianosaisilla on mahdollisuus muistutuksen tekemiseen suunnitelmasta. Muistutukset on toimitettava Väyläviraston kirjaamoon <kirjaamon VAYLAVIRASTO osoitetta ei löydy>tai <postiosoite> ennen nähtävillä oloajan päättymistä. Muistutukseen on liitettävä asian asianumero VAYLA/2/2022
Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille, joiden kiinteistön alueelle suunniteltu uusi tielinjaus sijoittuu (LjMTL 27 § 3 mom).
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 



Pekka Projari (Väylävirasto), 
puh. 123456789, pekka.projari(at)vayla.fi 
Matti Meikalainen (Väylävirasto), 
puh. 123456789, Matti.Meikalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
Väylävirasto
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutus pdf succesfully 1`] = `
Object {
  "hankkeenKuvaus": Object {
    "RUOTSI": "På svenska",
    "SAAME": "Saameksi",
    "SUOMI": "Lorem Ipsum",
  },
  "id": 1,
  "kielitiedot": Object {
    "ensisijainenKieli": "SUOMI",
    "projektinNimiVieraskielella": "Namnet på svenska",
    "toissijainenKieli": "RUOTSI",
  },
  "kuulutusPaiva": "2022-01-02",
  "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  "suunnitteluSopimus": Object {
    "__typename": "SuunnitteluSopimusJulkaisu",
    "email": "Kunta.Kuntalainen@vayla.fi",
    "etunimi": "Kunta",
    "kunta": 536,
    "logo": "logo.gif",
    "puhelinnumero": "123456789",
    "sukunimi": "Kuntalainen",
  },
  "velho": Object {
    "asiatunnusELY": "ELY/1/2022",
    "asiatunnusVayla": "VAYLA/1/2022",
    "kunnat": Array [
      837,
      536,
    ],
    "maakunnat": Array [
      1,
      6,
    ],
    "nimi": "Testiprojekti 1",
    "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
    "tyyppi": "TIE",
    "vaylamuoto": Array [
      "tie",
    ],
  },
  "yhteystiedot": Array [
    Object {
      "etunimi": "Kunta",
      "kunta": 536,
      "organisaatio": "Nokia",
      "puhelinnumero": "123456789",
      "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
      "sukunimi": "Kuntalainen",
    },
    Object {
      "etunimi": "Marko",
      "organisaatio": "Kajaani",
      "puhelinnumero": "0293121213",
      "sahkoposti": "markku.koi@koi.com",
      "sukunimi": "Koi",
    },
  ],
}
`;

exports[`asiakirjaService should generate kuulutus pdf succesfully 2`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_T412 Aloituskuulutus.pdf",
  "textContent": "
Kuulutus suunnittelun aloittamisesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa, aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
Lorem Ipsum
Nokia on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa www.vayliensuunnittelu.fi. Kuulutus pidetään nähtävillä 2.1.2022-1.2.2022.
Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).
Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). 
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.



Lisätietoja antaa 



Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutus pdf succesfully 3`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_T412_1 Ilmoitus aloituskuulutuksesta.pdf",
  "textContent": "
Ilmoitus aloituskuulutuksesta
Testiprojekti 1
Nokia, sovittuaan asiasta Uudenmaan ELY-keskuksen kanssa julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman suunnittelun ja maastotöiden aloittamista. Nokia saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §)
Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.ely-keskus.fi/kuulutukset



Kuulutus on nähtävillä 2.1.2022-1.2.2022 välisen ajan
Lisätietoja antaa 



Kunta Kuntalainen (Nokia), 
puh. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Marko Koi (Kajaani), 
puh. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutus pdf succesfully 4`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_T412 Aloituskuulutus RUOTSIKSI.pdf",
  "textContent": "
Kungörelse om inledandet av planeringen
Namnet på svenska
RUOTSIKSI Nokia, sovittuaan asiasta RUOTSIKSI Uudenmaan ELY-keskuksen kanssa, aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.
På svenska
RUOTSIKSI Nokia on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa www.vayliensuunnittelu.fi. Kuulutus pidetään nähtävillä 2.1.2022-1.2.2022.
RUOTSIKSI Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).
RUOTSIKSI Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). 
RUOTSIKSI Uudenmaan ELY-keskus behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja



Mer information om planen 



Kunta Kuntalainen (Nokia), 
tel. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;

exports[`asiakirjaService should generate kuulutus pdf succesfully 5`] = `
Object {
  "fileName": "esikatselu_aloituskuulutus_T412_1 Ilmoitus aloituskuulutuksesta RUOTSIKSI.pdf",
  "textContent": "
RUOTSIKSI Ilmoitus aloituskuulutuksesta
Namnet på svenska
RUOTSIKSI Nokia, sovittuaan asiasta RUOTSIKSI Uudenmaan ELY-keskuksen kanssa julkaisee kuulutuksen, joka koskee otsikossa mainitun vägplanen suunnittelun ja maastotöiden aloittamista. Nokia saattaa asian tiedoksi julkisesti kuuluttamalla siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §)
RUOTSIKSI Kuulutus julkaistaan 2.1.2022 osoitteessa https://www.ely-keskus.fi/kuulutukset



RUOTSIKSI Kuulutus on nähtävillä 2.1.2022-1.2.2022 välisen ajan
Mer information om planen 



Kunta Kuntalainen (Nokia), 
tel. 123456789, Kunta.Kuntalainen(at)vayla.fi 
Marko Koi (Kajaani), 
tel. 0293121213, markku.koi(at)koi.com 
LUONNOS",
}
`;
